# df-car-accidents

./: .gitignore  pyproject.toml
notebooks/: 000_osm_data.ipynb  eda.ipynb  overpass.py
output/: .gitignore
