[tool.poetry]
name = "accidents"
version = "0.0.0"
description = ""
authors = ["Marcin Maslany"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.3"
matplotlib = "^3.2.1"
numpy = "^1.18.4"
geopandas = "^0.7.0"
xgboost = "^1.1.0"
catboost = "^0.23.2"
scikit-learn = "^0.23.1"
OSMPythonTools = "^0.2.8"
notebook = "^6.0.3"

[tool.poetry.dev-dependencies]
ipython = "^7.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
